fixed scrollbar visibility on windows

--- a/css/Cards.css
+++ b/css/Cards.css
@@ -10,6 +10,12 @@
     overflow: scroll;
 }
 
+.card::-webkit-scrollbar{
+    display: none;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
 .card a {
     text-decoration: none;
     color: #a35364;
