--- a/css/Content.css
+++ b/css/Content.css
@@ -15,6 +15,13 @@
     align-items: center;
     align-content: center;
     /* background-color: grey; */
+    
+}
+
+.content::-webkit-scrollbar{
+    display: none;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 .scrolling-wrapper {
